# TFM

./: .gitignore  00_project_setup.ipynb  01_download_benchmarks.ipynb  02_baseline_audit.ipynb  03_baseline_analysis.ipynb  04_sft_dataset_curation.ipynb  05_qlora_sft.ipynb  06_impact_evaluation.ipynb  07_final_report.ipynb  README.md  pyproject.toml
data/processed/: dpo_train.jsonl  dpo_valid.jsonl  eval_holdout_bbq.csv  eval_holdout_crows.csv  sft_metadata.csv  sft_rewrite_audit.csv  sft_train.jsonl  sft_valid.jsonl
data/templates/: sft_schema.md
outputs/analysis/: analysis_summary.xlsx  baseline_summary.xlsx  final_summary_table.csv  project_snapshot.json  rewrite_audit_summary.csv
outputs/eval/: anthropic_claude-haiku-4.5_metrics.xlsx  deepseek_deepseek-v4-flash_metrics.xlsx  extended_analysis.json  google_gemini-3.1-flash-lite_metrics.xlsx  impact_metrics.json  llama3.1-sft-unbiased-q4_k_m_latest_metrics.xlsx  llama3.1_latest_metrics.xlsx  minimax_minimax-m2.7_metrics.xlsx  minimax_minimax-m3_metrics.xlsx  mistral_7b_metrics.xlsx  mistralai_ministral-8b-2512_metrics.xlsx  moonshotai_kimi-k2.6_metrics.xlsx  openai_gpt-5.4-nano_metrics.xlsx  qwen_qwen3.6-flash_metrics.xlsx  x-ai_grok-4.3_metrics.xlsx  xiaomi_mimo-v2-flash_metrics.xlsx
