[project]
name = "tfm-bias-mitigation-llama3"
version = "0.1.0"
description = "TFM pipeline for bias auditing and mitigation on Llama 3 with SFT + QLoRA"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2.0",
  "transformers>=4.45.0",
  "datasets==2.21.0",
  "accelerate>=0.33.0",
  "peft>=0.12.0",
  "trl>=0.10.1",
  "bitsandbytes>=0.43.1",
  "scikit-learn>=1.5.0",
  "pandas>=2.2.2",
  "openpyxl>=3.1.5",
  "numpy>=1.26.4",
  "tqdm>=4.66.4",
  "pyyaml>=6.0.2",
  "sentencepiece>=0.2.0",
  "protobuf>=5.27.2",
  "requests>=2.32.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "langchain-ollama>=1.0.1",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
]

[tool.uv]
package = false
